<?xml version="1.0" encoding="UTF-8" standalone="no"?>
<resources>

    <string name="mine_mineFragment4">确定要退出吗</string>
    <string name="mine_mine_activity_reset_password60">原密码</string>
    <string name="mine_mineFragment3">离董事分红仅差一步，赶快邀请好友。</string>
    <string name="mine_mine_activity_invite100">专属邀请码</string>
    <string name="mine_bindMobileOrEmailActivity1">邮箱验证码</string>
    <string name="mine_bindMobileOrEmailActivity2">手机验证码</string>
    <string name="mine_resetPasswordActivity2">两次密码输入不一致</string>
    <string name="mine_mine_activity_security120">登录密码</string>
    <string name="mine_resetPasswordActivity1">请输入新密码</string>
    <string name="mine_dividendBean1">第二十五周</string>
    <string name="mine_mineFragment2">欢迎来到SCEX</string>
    <string name="mine_mineFragment1">点击登录</string>
    <string name="mine_mine_activity_my_team20">我的团队</string>
    <string name="mine_mine_activity_reset_password20">修改登录密码</string>
    <string name="mine_verify6">邮箱验证</string>
    <string name="mine_verify5">邮箱地址</string>
    <string name="mine_verify4">谷歌认证</string>
    <string name="mine_verify3">谷歌身份验证器</string>
    <string name="mine_resetPayPasswordActivity1">请输入新资金密码</string>
    <string name="mine_verify2">短信验证</string>
    <string name="mine_mine_item_comission_top120">今日预估佣金:</string>
    <string name="mine_verify1">手机号码</string>
    <string name="mine_mine_activity_reset_pa_ypassword130">资金密码</string>
    <string name="mine_mine_item_comission_top80">冻结佣金:</string>
    <string name="mine_mine_activity_director120">累计分红</string>
    <string name="mine_mine_activity_bind_mobile_or_email140">获取验证码</string>
    <string name="mine_mine_fragment_mine130">订单管理</string>
    <string name="mine_mine_item_dividend20">第四周</string>
    <string name="mine_mine_activity_bind_googl_everify210">立即开启</string>
    <string name="mine_mine_fragment_mine210">版本号</string>
    <string name="mine_mine_activity_bind_googl_everify40">打开谷歌验证器，扫描下方二维码或手动输入下述秘钥添加验证令牌。 秘钥用户手机更换或遗失时找回谷歌验证器，绑定前请务必将下述秘 钥备份保存。</string>
    <string name="mine_mine_activity_security20">安全中心</string>
    <string name="mine_mine_activity_language100">繁体中文</string>
    <string name="mine_mine_activity_reset_password260">请输入确认密码</string>
    <string name="mine_mine_activity_reset_password100">请输入原密码</string>
    <string name="mine_mine_activity_bind_googl_everify170">谷歌验证码</string>
    <string name="mine_mine_activity_reset_password220">新密码确认</string>
    <string name="mine_mine_activity_commission140">佣金</string>
    <string name="mine_mine_activity_bind_mobile_or_email20">绑定手机</string>
    <string name="mine_mine_activity_invite190">专属推广海报</string>
    <string name="mine_mine_activity_my_team230">我的直推</string>
    <string name="mine_mine_activity_bind_mobile_or_email60">请输入您的手机号码</string>
    <string name="mine_mine_activity_share_img20">我要推广</string>
    <string name="mine_mine_activity_setting_password20">设置资金密码</string>
    <string name="mine_verifySettingActivity1">未绑定</string>
    <string name="mine_mine_activity_director180">分红明细</string>
    <string name="mine_mine_activity_reset_password130">新密码</string>
    <string name="mine_mine_activity_bind_googl_everify140">复制</string>
    <string name="mine_verifySettingActivity2">已绑定</string>
    <string name="mine_mine_activity_setting_password100">请输入资金密码</string>
    <string name="mine_mine_item_comission_top100">累计佣金:</string>
    <string name="mine_mine_activity_reset_password170">8-20位字符且字母数字组合</string>
    <string name="mine_mine_activity_my_team120">团队人数</string>
    <string name="mine_mine_activity_my_team160">今日新增</string>
    <string name="mine_securityActivity1">未设置</string>
    <string name="mine_mine_item_team20">孙悟空</string>
    <string name="mine_securityActivity2">已设置</string>
    <string name="mine_mine_activity_invite210">我的客户</string>
    <string name="mine_mine_activity_director20">董事分红</string>
    <string name="mine_mine_fragment_mine230">退出登录</string>
    <string name="mine_mine_activity_bind_mobile_or_email120">请输入验证码</string>
    <string name="mine_mine_activity_language20">选择语言</string>
    <string name="mine_mine_activity_bind_googl_everify20">绑定谷歌验证器</string>
    <string name="mine_mine_activity_security40">* 短信验证用于提币、转账、修改登录和资金密码；\n* 谷歌验证用于登录、提币、修改登录和资金密码；\n* 为了保证您的账户安全，以下两种验证方式至少开启一种；</string>
    <string name="mine_securityActivity5">为了保证您的账户安全，短信验证和谷歌验证方式至少开启一种</string>
    <string name="mine_mine_activity_language60">简体中文</string>
    <string name="mine_securityActivity3">已开启</string>
    <string name="mine_mine_activity_bind_googl_everify60">请妥善备份秘钥以防遗失</string>
    <string name="mine_mine_fragment_mine190">联系客服</string>
    <string name="mine_securityActivity4">未开启</string>
    <string name="mine_mine_activity_bind_googl_everify190">请输入6位验证码</string>
    <string name="mine_mine_activity_commission160">平仓时间</string>
    <string name="mine_mine_fragment_mine40">阿童木</string>
    <string name="mine_mine_activity_reset_pa_ypassword220">密码确认</string>
    <string name="mine_mine_activity_reset_pa_ypassword100">请输入原资金密码</string>
    <string name="mine_mine_fragment_mine80">普通会员</string>
    <string name="mine_mine_activity_commission20">佣金明细</string>
    <string name="mine_mine_activity_reset_pa_ypassword60">原资金密码</string>
    <string name="mine_mine_activity_reset_pa_ypassword260">请输入确认资金密码</string>
    <string name="mine_mine_activity_bind_mobile_or_email170">提交</string>
    <string name="mine_mine_activity_invite20">邀请好友</string>
    <string name="mine_mine_activity_reset_pa_ypassword20">修改资金密码</string>
    <string name="mine_save">保存相册</string>
    <string name="mine_mine_activity_invite201">规则</string>
    <string name="mine_change">修改</string>
    <string name="mine_bindMobileOrEmailActivity101">绑定邮箱</string>
    <string name="mine_bindMobileOrEmailActivity201">请输入您的邮箱地址</string>
    <string name="mine_mission_total">累计佣金折合(USDT)</string>
</resources>
