<?xml version="1.0" encoding="utf-8" standalone="no"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:tools="http://schemas.android.com/tools" android:background="@color/mine_background" android:layout_height="match_parent" android:layout_width="match_parent" android:orientation="vertical">


    <com.sskj.common.view.ToolBarLayout android:layout_height="wrap_content" android:layout_width="match_parent" app:background_color="@color/common_action_bar" app:title="@string/mine_verify2"/>

    <LinearLayout android:background="@color/common_action_bar" android:layout_height="50dp" android:layout_marginTop="5dp" android:layout_width="match_parent" android:orientation="horizontal" android:paddingLeft="@dimen/common_margin" android:paddingRight="@dimen/common_margin">

        <TextView android:gravity="center" android:id="@+id/verify_name" android:layout_height="match_parent" android:layout_width="wrap_content" android:text="@string/mine_verify1" android:textColor="@color/common_text" android:textSize="16sp"/>

        <TextView android:gravity="center_vertical" android:id="@+id/verify_account" android:layout_height="match_parent" android:layout_marginLeft="@dimen/common_margin" android:layout_weight="1" android:layout_width="0dp" android:textColor="@color/common_text" android:textSize="16sp" tools:text="187*111"/>

        <TextView android:gravity="center_vertical" android:id="@+id/verify_status" android:layout_height="match_parent" android:layout_width="wrap_content" android:text="@string/mine_verifySettingActivity1" android:textColor="@color/common_hint"/>

    </LinearLayout>

    <View android:background="@color/common_divider" android:layout_height="1dp" android:layout_width="match_parent"/>

    <LinearLayout android:background="@color/common_action_bar" android:layout_height="wrap_content" android:layout_width="match_parent" android:paddingLeft="@dimen/common_margin" android:paddingRight="@dimen/common_margin">


        <TextView android:gravity="center_vertical" android:id="@+id/verify_check_text" android:layout_height="match_parent" android:layout_weight="1" android:layout_width="0dp" android:text="@string/mine_verify2" android:textColor="@color/common_text"/>

        <com.sskj.common.view.CheckButton android:button="@drawable/mine_switch" android:gravity="center_vertical" android:id="@+id/verify_check" android:layoutDirection="rtl" android:layout_height="50dp" android:layout_width="wrap_content" android:textColor="@color/common_text"/>
    </LinearLayout>

</LinearLayout>
